--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "debug": "~4.1.1",
     "ejs": "~3.0.1",
     "express": "~4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.4",
-    "multer": "^1.4.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-cookie": "^1.0.6",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "serve-favicon": "~2.5.0"
   }
 }
