--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.19.0",
+    "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~4.1.1",
     "ejs": "~3.0.1",
