--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-cookie": "^1.0.6",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "serve-favicon": "~2.5.0"
+    "serve-favicon": "~2.5.0",
+    "socket.io": "^2.3.0"
   }
 }
