--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~3.0.1",
     "express": "~4.17.1",
     "express-session": "^1.17.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
