--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~4.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "~3.0.1",
     "express": "~4.17.1",
     "express-session": "^1.17.0",
